// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert snapshots should match for basic 1`] = `
.c0 {
  position: relative;
  color: white;
  padding: 1rem;
  background-color: red;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
  padding-right: 25px;
  border: 1px solid #d05353;
  background-color: #d97575;
}

.c0 h2 {
  line-height: normal;
  font-weight: bold;
  margin-right: 1.5rem;
  margin-bottom: 0.25rem;
}

.c0 div {
  margin-top: 0.25rem;
}

<div
  className="c0"
  role="alert"
>
  <h2>
    Login Error
  </h2>
  <div>
    This is an error
  </div>
</div>
`;

exports[`Alert snapshots should match with button 1`] = `
.c1 {
  -webkit-appearance: none;
  background: transparent;
  padding: 0;
  border: 0;
  outline: none;
  color: inherit;
  cursor: pointer;
  line-height: 1;
  position: absolute;
  right: 1.5rem;
  top: 1.5rem;
  height: 0.75rem;
  width: 0.75rem;
}

.c1 > svg {
  fill: currentColor;
}

.c0 {
  position: relative;
  color: white;
  padding: 1rem;
  background-color: red;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
  padding-right: 25px;
  border: 1px solid #d05353;
  background-color: #d97575;
}

.c0 h2 {
  line-height: normal;
  font-weight: bold;
  margin-right: 1.5rem;
  margin-bottom: 0.25rem;
}

.c0 div {
  margin-top: 0.25rem;
}

<div
  className="c0"
  role="alert"
>
  <h2>
    Login Error
  </h2>
  <div>
    This is an error
  </div>
  <button
    className="c1"
    onClick={[Function]}
  >
    <svg
      viewBox="0 0 212.982 212.982"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M131.804 106.491l75.936-75.936c6.99-6.99 6.99-18.323 0-25.312-6.99-6.99-18.322-6.99-25.312 0L106.491 81.18 30.554 5.242c-6.99-6.99-18.322-6.99-25.312 0-6.989 6.99-6.989 18.323 0 25.312l75.937 75.936-75.937 75.937c-6.989 6.99-6.989 18.323 0 25.312 6.99 6.99 18.322 6.99 25.312 0l75.937-75.937 75.937 75.937c6.989 6.99 18.322 6.99 25.312 0 6.99-6.99 6.99-18.322 0-25.312l-75.936-75.936z"
        fill-rule="evenodd"
      />
    </svg>
    <span />
  </button>
</div>
`;
